--- a/_posts/2012-11-29-ca-zephyr.markdown
+++ b/_posts/2012-11-29-ca-zephyr.markdown
@@ -1,6 +1,7 @@
 ---
 title: California Zephyr.
 layout: post
+guid: urn:uuid:00e12e04-d6bc-4361-8b7e-6306fb80a0ee
 tags:
 - California Zephyr
 - Travel
