--- a/_posts/2020-09-15-Acadia-NP.markdown
+++ b/_posts/2020-09-15-Acadia-NP.markdown
@@ -29,15 +29,15 @@ tags:
 
 龙虾搭配龙蒿草、芹菜、大头菜，酸甜结合，味道鲜甜。
 
-![3](/media/files/2020/09/15/3.jpg)
+![3](/media/files/2020/09/15/3.JPG)
 
 鱼搭配地瓜片和芝麻菜，外焦里嫩。
 
-![4](/media/files/2020/09/15/4.jpg)
+![4](/media/files/2020/09/15/4.JPG)
 
 牛排搭配阿根廷青酱和漆树香料，点餐时没有问我们要几成熟，牛排稍微烤得比我们平时吃的老，平时我们吃三分 (Medium Rare)，这个差不多有七分 (Medium Well)，但味道还不错。
 
-![5](/media/files/2020/09/15/5.jpg)
+![5](/media/files/2020/09/15/5.JPG)
 
 
 ## 第二天@Acadia：
